--- a/k8s/cronjob.yaml
+++ b/k8s/cronjob.yaml
@@ -15,6 +15,7 @@ spec:
     spec:
       completions: 1
       parallelism: 1
+      backoffLimit: 0
       template:
         metadata:
           labels:
