use estafette foundation for json logging

--- a/helm/p1-bigquery-exporter/values.yaml
+++ b/helm/p1-bigquery-exporter/values.yaml
@@ -16,6 +16,8 @@ config:
 secret:
   gcpServiceAccountKeyfile: '{}'
 
+logFormat: json
+
 image:
   repository: jsalverda/p1-bigquery-exporter
   pullPolicy: IfNotPresent
