--- a/helm/p1-bigquery-exporter/templates/cronjob.yaml
+++ b/helm/p1-bigquery-exporter/templates/cronjob.yaml
@@ -40,6 +40,8 @@ spec:
             image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
             imagePullPolicy: {{ .Values.image.pullPolicy }}    
             env:
+            - name: ESTAFETTE_LOG_FORMAT
+              value: {{ .Values.logFormat }}
             - name: P1_DEVICE_PATH
               valueFrom:
                 configMapKeyRef:
