--- a/helm/p1-bigquery-exporter/templates/cronjob.yaml
+++ b/helm/p1-bigquery-exporter/templates/cronjob.yaml
@@ -67,6 +67,8 @@ spec:
                 configMapKeyRef:
                   name: {{ include "p1-bigquery-exporter.fullname" . }}
                   key: bq-table
+            - name: MEASUREMENT_FILE_CONFIG_MAP_NAME
+              value: {{ include "p1-bigquery-exporter.fullname" . }}
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: /secrets/keyfile.json
             resources:
